# spaic-assembly

./: .gitignore  README.md
bringup/launch/: mirte.launch.py
detection/: README.md  package.xml  setup.py
detection/config/: detection.yaml
detection/detection/: detection.py  occupancy_grid.py
detection/launch/: detection.launch.py
grasping/: CMakeLists.txt  README.md  package.xml
grasping/launch/: grasping.launch.py
grasping/src/: grasping.cpp  joint_state_filter.cpp
navigation/: README(1).md  move_to_server.py  package.xml  setup.py
navigation/launch/: navigation.launch.py
navigation/navigation/: move_to_server.py
orchestration/: package.xml  setup.cfg  setup.py
orchestration/launch/: orchestrator.launch.py
orchestration/orchestration/: orchestrator.py
slam/: README.md  package.xml  setup.py
slam/config/: slam_toolbox.yaml
slam/launch/: slam.launch.py
slam/slam/: slam.py
tetris_assembly_bringup/: package.xml  setup.cfg  setup.py
tetris_assembly_bringup/launch/: mirte.launch.py  pc.launch.py
