<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orchestration</name>
  <version>0.0.0</version>
  <description>High-level orchestrator/planner/executor that drives the tetris-assembly pipeline.</description>
  <maintainer email="frank.zillmann@tum.de">Frank Zillmann</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mirte_location_markers_msgs</exec_depend>
  <exec_depend>grasping</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
